@@ -3,6 +3,8 @@
 #include "Utils/HTTP.h"
 #include "Util.h"
 #include "GUIImage.h"
+#include "Picture.h"
+#include "GUIDialogFileBrowser.h"
 
 
 #define CONTROL_ALBUM  20
@@ -33,7 +35,6 @@ bool CGUIWindowMusicInfo::OnMessage(CGUIMessage& message)
   {
   case GUI_MSG_WINDOW_DEINIT:
     {
-      m_pAlbum = NULL;
     }
     break;
 
@@ -59,8 +60,11 @@ bool CGUIWindowMusicInfo::OnMessage(CGUIMessage& message)
         Close();
         return true;
       }
-
-      if (iControl == CONTROL_BTN_TRACKS)
+      else if (iControl == CONTROL_BTN_GET_THUMB)
+      {
+        OnGetThumb();
+      }
+      else if (iControl == CONTROL_BTN_TRACKS)
       {
         m_bViewReview = !m_bViewReview;
         Update();
@@ -74,46 +78,49 @@ bool CGUIWindowMusicInfo::OnMessage(CGUIMessage& message)
 
 void CGUIWindowMusicInfo::SetAlbum(CMusicAlbumInfo& album)
 {
-  m_pAlbum = &album;
+  m_album = album;
+  m_albumItem = CFileItem(album.GetAlbumPath(), true);
+  m_albumItem.m_musicInfoTag.SetAlbum(album.GetTitle());
+  m_albumItem.m_musicInfoTag.SetLoaded(true);
+  m_albumItem.SetMusicThumb();
 }
 
 void CGUIWindowMusicInfo::Update()
 {
-  if (!m_pAlbum) return ;
   CStdString strTmp;
-  SetLabel(CONTROL_ALBUM, m_pAlbum->GetTitle() );
-  SetLabel(CONTROL_ARTIST, m_pAlbum->GetArtist() );
-  SetLabel(CONTROL_DATE, m_pAlbum->GetDateOfRelease() );
+  SetLabel(CONTROL_ALBUM, m_album.GetTitle() );
+  SetLabel(CONTROL_ARTIST, m_album.GetArtist() );
+  SetLabel(CONTROL_DATE, m_album.GetDateOfRelease() );
 
   CStdString strRating;
-  if (m_pAlbum->GetRating() > 0)
-    strRating.Format("%i/9", m_pAlbum->GetRating());
+  if (m_album.GetRating() > 0)
+    strRating.Format("%i/9", m_album.GetRating());
   SetLabel(CONTROL_RATING, strRating );
 
-  SetLabel(CONTROL_GENRE, m_pAlbum->GetGenre() );
+  SetLabel(CONTROL_GENRE, m_album.GetGenre() );
   {
     CGUIMessage msg1(GUI_MSG_LABEL_RESET, GetID(), CONTROL_TONE);
     OnMessage(msg1);
   }
   {
-    strTmp = m_pAlbum->GetTones(); strTmp.Trim();
+    strTmp = m_album.GetTones(); strTmp.Trim();
     CGUIMessage msg1(GUI_MSG_LABEL_ADD, GetID(), CONTROL_TONE);
     msg1.SetLabel( strTmp );
     OnMessage(msg1);
   }
-  SetLabel(CONTROL_STYLES, m_pAlbum->GetStyles() );
+  SetLabel(CONTROL_STYLES, m_album.GetStyles() );
 
   if (m_bViewReview)
   {
-    SET_CONTROL_LABEL(CONTROL_TEXTAREA, m_pAlbum->GetReview());
+    SET_CONTROL_LABEL(CONTROL_TEXTAREA, m_album.GetReview());
     SET_CONTROL_LABEL(CONTROL_BTN_TRACKS, 182);
   }
   else
   {
     CStdString strLine;
-    for (int i = 0; i < m_pAlbum->GetNumberOfSongs();++i)
+    for (int i = 0; i < m_album.GetNumberOfSongs();++i)
     {
-      const CMusicSong& song = m_pAlbum->GetSong(i);
+      const CMusicSong& song = m_album.GetSong(i);
       CStdString strTmp;
       strTmp.Format("%i. %-30s\n",
                     song.GetTrack(),
@@ -123,9 +130,9 @@ void CGUIWindowMusicInfo::Update()
 
     SET_CONTROL_LABEL(CONTROL_TEXTAREA, strLine);
 
-    for (int i = 0; i < m_pAlbum->GetNumberOfSongs();++i)
+    for (int i = 0; i < m_album.GetNumberOfSongs();++i)
     {
-      const CMusicSong& song = m_pAlbum->GetSong(i);
+      const CMusicSong& song = m_album.GetSong(i);
       CStdString strTmp;
 
       if (song.GetDuration() > 0)
@@ -139,7 +146,14 @@ void CGUIWindowMusicInfo::Update()
     SET_CONTROL_LABEL(CONTROL_BTN_TRACKS, 183);
 
   }
-
+  // update the thumbnail
+  const CGUIControl* pControl = GetControl(CONTROL_IMAGE);
+  if (pControl)
+  {
+    CGUIImage* pImageControl = (CGUIImage*)pControl;
+    pImageControl->FreeResources();
+    pImageControl->SetFileName(m_albumItem.GetThumbnailImage());
+  }
 }
 
 void CGUIWindowMusicInfo::SetLabel(int iControl, const CStdString& strLabel)
@@ -169,26 +183,21 @@ void CGUIWindowMusicInfo::Refresh()
     return ;
   }
 
-  CStdString strImage = m_pAlbum->GetImageURL();
-  CStdString strThumb(CUtil::GetCachedAlbumThumb(m_pAlbum->GetTitle(), m_pAlbum->GetAlbumPath()));
-  if (!CFile::Exists(strThumb) && !strImage.IsEmpty() )
+  CStdString thumbImage = m_albumItem.GetThumbnailImage();
+  if (!m_albumItem.HasThumbnail())
+    thumbImage = CUtil::GetCachedAlbumThumb(m_album.GetTitle(), m_album.GetAlbumPath());
+
+  if (!CFile::Exists(thumbImage))
   {
-    // Download image and save as
-    // permanent thumb
-    CHTTP http;
-    http.Download(strImage, strThumb);
+    DownloadThumbnail(thumbImage);
   }
 
-  if (!CFile::Exists(strThumb) )
+  if (!CFile::Exists(thumbImage) )
   {
-    strThumb.Empty();
+    thumbImage.Empty();
   }
-  const CGUIControl* pControl = GetControl(CONTROL_IMAGE);
-  if (pControl)
-  {
-    CGUIImage* pImageControl = (CGUIImage*)pControl;
-    pImageControl->SetFileName(strThumb);
-  }
+
+  m_albumItem.SetThumbnailImage(thumbImage);
   Update();
 }
 
@@ -197,9 +206,111 @@ bool CGUIWindowMusicInfo::NeedRefresh() const
   return m_bRefresh;
 }
 
+bool CGUIWindowMusicInfo::DownloadThumbnail(const CStdString &thumbFile)
+{
+  // Download image and save as thumbFile
+  if (m_album.GetImageURL().IsEmpty())
+    return false;
+  
+  CHTTP http;
+  http.Download(m_album.GetImageURL(), thumbFile);
+  return true;
+}
+
 void CGUIWindowMusicInfo::OnInitWindow()
 {
   CGUIDialog::OnInitWindow();
-  // disable button with id 10 as we don't have support for it yet!
-  CONTROL_DISABLE(10);
+}
+
+// Get Thumb from user choice.
+// Options are:
+// 1.  Current thumb
+// 2.  AllMusic.com thumb
+// 3.  Local thumb
+// 4.  No thumb (if no Local thumb is available)
+
+// TODO: Currently no support for "embedded thumb" as there is no easy way to grab it
+//       without sending a file that has this as it's album to this class
+void CGUIWindowMusicInfo::OnGetThumb()
+{
+  CFileItemList items;
+
+  // Grab the thumbnail from the web
+  CStdString thumbFromWeb;
+  CUtil::AddFileToFolder(g_advancedSettings.m_cachePath, "allmusicThumb.jpg", thumbFromWeb);
+  if (DownloadThumbnail(thumbFromWeb))
+  {
+    CFileItem *item = new CFileItem("thumb://allmusic.com", false);
+    item->SetThumbnailImage(thumbFromWeb);
+    item->SetLabel(g_localizeStrings.Get(20055)); // TODO: localize 2.0
+    items.Add(item);
+  }
+
+  // Current thumb
+  if (CFile::Exists(m_albumItem.GetThumbnailImage()))
+  {
+    CFileItem *item = new CFileItem("thumb://Current", false);
+    item->SetThumbnailImage(m_albumItem.GetThumbnailImage());
+    item->SetLabel(g_localizeStrings.Get(20016)); // TODO: localize 2.0
+    items.Add(item);
+  }
+
+  // local thumb
+  CStdString cachedLocalThumb;
+  CStdString localThumb(m_albumItem.GetUserMusicThumb());
+  if (CFile::Exists(localThumb))
+  {
+    CUtil::AddFileToFolder(g_advancedSettings.m_cachePath, "localthumb.jpg", cachedLocalThumb);
+    CPicture pic;
+    pic.DoCreateThumbnail(localThumb, cachedLocalThumb);
+    CFileItem *item = new CFileItem("thumb://Local", false);
+    item->SetThumbnailImage(cachedLocalThumb);
+    item->SetLabel(g_localizeStrings.Get(20017)); // TODO: localize 2.0
+    items.Add(item);
+  }
+  else
+  { // no local thumb exists, so we are just using the allmusic.com thumb or cached thumb
+    // which is probably the allmusic.com thumb.  These could be wrong, so allow the user
+    // to delete the incorrect thumb
+    if (0 == items.Size())
+    { // no cached thumb or no allmusic.com thumb available
+      // TODO: tell user and return
+      return;
+    }
+    CFileItem *item = new CFileItem("thumb://None", false);
+    item->SetThumbnailImage("defaultAlbumBig.png");
+    item->SetLabel(g_localizeStrings.Get(20018)); // TODO: localize 2.0
+    items.Add(item);
+  }
+
+  CStdString result;
+  // TODO: localize 2.0
+  if (!CGUIDialogFileBrowser::ShowAndGetImage(items, g_localizeStrings.Get(20019), result))
+    return;   // user cancelled
+
+  if (result == "thumb://Current")
+    return;   // user chose the one they have
+
+  // delete the thumbnail if that's what the user wants, else overwrite with the
+  // new thumbnail
+  CStdString cachedThumb(CUtil::GetCachedAlbumThumb(m_album.GetTitle(), m_album.GetAlbumPath()));
+
+  if (result == "thumb://None")
+  { // delete any cached thumb
+    CFile::Delete(cachedThumb);
+    cachedThumb.Empty();
+  }
+  else if (result == "thumb://IMDb")
+    CFile::Cache(thumbFromWeb, cachedThumb);
+  else // if (result == "thumb://Local")
+    CFile::Cache(cachedLocalThumb, cachedThumb);
+
+  m_albumItem.SetThumbnailImage(cachedThumb);
+
+  // tell our GUI to completely reload all controls (as some of them
+  // are likely to have had this image in use so will need refreshing)
+  CGUIMessage msg(GUI_MSG_NOTIFY_ALL, 0, 0, GUI_MSG_REFRESH_THUMBS, 0, NULL);
+  g_graphicsContext.SendMessage(msg);
+  // Update our screen
+  Update();
 }
